--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,16 @@
 Package: reticulate.test
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Dummy reticulate-based package to check delayed import.
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Authors@R: c(
+    person("Ghislain", "Durif", , "gd.dev@libertymail.net", role = c("aut", "cre"),
+           comment = c(ORCID = "0000-0003-2567-1401"))
+  )
+Description: Dummy reticulate-based package to check delayed import.
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+Imports:
+    reticulate
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.2.3
